--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libnetfilter-conntrack
 Section: libs
 Priority: optional
 Maintainer: Max Kellermann <max@duempel.org>
-Build-Depends: debhelper (>= 5), gcc (>= 3.4), libnfnetlink-dev (>= 0.0.16)
+Build-Depends: debhelper (>= 5), libnfnetlink-dev (>= 0.0.16)
 Standards-Version: 3.7.2
 
 Package: libnetfilter-conntrack1
