symlink doc of -dev

--- a/debian/rules
+++ b/debian/rules
@@ -73,11 +73,10 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir -a
 	dh_testroot -a
-	dh_installdocs -plibnetfilter-conntrack-dev
 	dh_installdocs -plibnetfilter-conntrack1
 	ln -sf libnetfilter-conntrack1 debian/libnetfilter-conntrack1-dbg/usr/share/doc/libnetfilter-conntrack1-dbg
+	ln -sf libnetfilter-conntrack1 debian/libnetfilter-conntrack1-dbg/usr/share/doc/libnetfilter-conntrack-dev
 	dh_installchangelogs -plibnetfilter-conntrack1
-	dh_installchangelogs -plibnetfilter-conntrack-dev
 	dh_install -a --sourcedir=debian/tmp
 	dh_link -a
 	dh_strip -a --dbg-package=libnetfilter-conntrack1-dbg
