--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 # -*- mode: makefile; coding: utf-8 -*-
 
 # Uncomment this to turn on verbose mode.
-export DH_VERBOSE=1
+#export DH_VERBOSE=1
 
 export DH_COMPAT = 5
 
