--- a/debian/control
+++ b/debian/control
@@ -9,14 +9,16 @@ Package: libnetfilter-conntrack1
 Architecture: any
 Depends: ${shlibs:Depends}
 Description: Netfilter netlink-conntrack library
- This is the userspace library for nfnetlink_conntrack.
+ libnetfilter_conntrack is a userspace library providing a programming
+ interface (API) to the in-kernel connection tracking state table.
 
 Package: libnetfilter-conntrack1-dbg
 Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends}, libnetfilter-conntrack1 (= ${Source-Version})
 Description: Debugging symbols for libnetfilter-conntrack1
- This is the userspace library for nfnetlink_conntrack.
+ libnetfilter_conntrack is a userspace library providing a programming
+ interface (API) to the in-kernel connection tracking state table.
  .
  This package provides the debugging symbols.
 
@@ -26,6 +28,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, pkg-config,
  libnetfilter-conntrack1 (= ${Source-Version})
 Description: Development files for libnetfilter-conntrack1
- This is the userspace library for nfnetlink_conntrack.
+ libnetfilter_conntrack is a userspace library providing a programming
+ interface (API) to the in-kernel connection tracking state table.
  .
  This package provides development files and static libraries.
