--- a/debian/control
+++ b/debian/control
@@ -27,7 +27,8 @@ Package: libnetfilter-conntrack-dev
 Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends}, pkg-config,
- libnetfilter-conntrack1 (= ${Source-Version})
+ libnetfilter-conntrack1 (= ${Source-Version}),
+ libnfnetlink-dev (>= 0.0.16)
 Description: Development files for libnetfilter-conntrack1
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
