Add README file

--- a/debian/rules
+++ b/debian/rules
@@ -70,7 +70,7 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir -a
 	dh_testroot -a
-	dh_installdocs -plibnetfilter-conntrack1
+	dh_installdocs -plibnetfilter-conntrack1 README
 	ln -sf libnetfilter-conntrack1 debian/libnetfilter-conntrack1-dbg/usr/share/doc/libnetfilter-conntrack1-dbg
 	ln -sf libnetfilter-conntrack1 debian/libnetfilter-conntrack-dev/usr/share/doc/libnetfilter-conntrack-dev
 	dh_installchangelogs -plibnetfilter-conntrack1
