--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: libs
 Priority: extra
 Maintainer: netfilter maintainers <netfilter-maintainers@ned.snow-crash.org>
 Uploaders: Max Kellermann <max@duempel.org>, Alexander Wirt <formorer@debian.org>
+Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
 Build-Depends: debhelper (>= 5), libnfnetlink-dev (>= 0.0.25)
 Standards-Version: 3.7.3
 
