--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.8.3
 
 Package: libnetfilter-conntrack3
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends} 
 Description: Netfilter netlink-conntrack library
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
@@ -17,7 +17,7 @@ Description: Netfilter netlink-conntrack library
 Package: libnetfilter-conntrack3-dbg
 Section: debug
 Architecture: any
-Depends: ${shlibs:Depends}, libnetfilter-conntrack3 (=  ${binary:Version})
+Depends: ${shlibs:Depends}, libnetfilter-conntrack3 (=  ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libnetfilter-conntrack3
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
@@ -29,7 +29,7 @@ Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends}, pkg-config,
  libnetfilter-conntrack3 (= ${binary:Version}),
- libnfnetlink-dev (>= 1.0.0)
+ libnfnetlink-dev (>= 1.0.0), ${misc:Depends}
 Description: Development files for libnetfilter-conntrack3
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
