--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,13 @@ Section: libs
 Priority: extra
 Maintainer: Alexander Wirt <formorer@debian.org>
 Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
-Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libtool
+Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libtool, dh-autoreconf
 Standards-Version: 3.9.3
 
 Package: libnetfilter-conntrack3
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${misc:Pre-Depends} 
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Netfilter netlink-conntrack library
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
@@ -16,7 +17,7 @@ Description: Netfilter netlink-conntrack library
 Package: libnetfilter-conntrack3-dbg
 Section: debug
 Architecture: any
-Depends: ${shlibs:Depends}, libnetfilter-conntrack3 (=  ${binary:Version}), ${misc:Depends}, ${misc:Pre-Depends}
+Depends: ${shlibs:Depends}, libnetfilter-conntrack3 (=  ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libnetfilter-conntrack3
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
