--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,9 @@
 #!/usr/bin/make -f
 %:
-	dh $@
+	dh $@  --with autoreconf
 
 override_dh_strip:
 	        dh_strip --dbg-package=libnetfilter-conntrack3-dbg
-
-override_dh_auto_install:
-	        dh_auto_install --destdir=debian/libnetfilter-conntrack3
 
 override_dh_installdocs:
 	        dh_installdocs --link-doc=libnetfilter-conntrack3
