--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Alexander Wirt <formorer@debian.org>
 Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
 Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libtool, dh-autoreconf
 Standards-Version: 3.9.3
+Vcs-Browser: https://github.com/formorer/pkg-libnetfilter-conntrack
+Vcs-Git: git://github.com/formorer/pkg-libnetfilter-conntrack.git
 
 Package: libnetfilter-conntrack3
 Architecture: any
