--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: libnetfilter-conntrack
 Section: libs
-Priority: extra
+Priority: optional
 Maintainer: Alexander Wirt <formorer@debian.org>
 Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
 Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libtool, dh-autoreconf
