--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: Alexander Wirt <formorer@debian.org>
 Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
-Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libtool, dh-autoreconf
+Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libmnl-dev (>= 1.0.3), libtool, dh-autoreconf
 Standards-Version: 3.9.3
 Vcs-Browser: https://github.com/formorer/pkg-libnetfilter-conntrack
 Vcs-Git: git://github.com/formorer/pkg-libnetfilter-conntrack.git
