Revert "Remove unavailable expansion variables"
This reverts commit 42f1fa1e79a958da41450ab61b6cf2fdc329379b.

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Package: libnetfilter-conntrack3-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: ${misc:Depends}, libnetfilter-conntrack3 (=  ${binary:Version})
+Depends: ${shlibs:Depends}, libnetfilter-conntrack3 (=  ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libnetfilter-conntrack3
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
@@ -31,9 +31,9 @@ Description: Debugging symbols for libnetfilter-conntrack3
 Package: libnetfilter-conntrack-dev
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, pkg-config,
+Depends: ${shlibs:Depends}, pkg-config,
  libnetfilter-conntrack3 (= ${binary:Version}),
- libnfnetlink-dev (>= 1.0.0)
+ libnfnetlink-dev (>= 1.0.0), ${misc:Depends}, ${misc:Pre-Depends}
 Description: Development files for libnetfilter-conntrack3
  libnetfilter_conntrack is a userspace library providing a programming
  interface (API) to the in-kernel connection tracking state table.
