--- a/src/conntrack/Makefile.in
+++ b/src/conntrack/Makefile.in
@@ -66,8 +66,8 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libnfconntrack_la_LIBADD =
-am_libnfconntrack_la_OBJECTS = api.lo getter.lo setter.lo parse.lo \
-	build.lo parse_mnl.lo build_mnl.lo snprintf.lo \
+am_libnfconntrack_la_OBJECTS = api.lo getter.lo setter.lo labels.lo \
+	parse.lo build.lo parse_mnl.lo build_mnl.lo snprintf.lo \
 	snprintf_default.lo snprintf_xml.lo objopt.lo compare.lo \
 	copy.lo filter.lo bsf.lo filter_dump.lo grp.lo grp_getter.lo \
 	grp_setter.lo stack.lo
@@ -237,12 +237,13 @@ top_srcdir = @top_srcdir@
 # Please read Chapter 6 "Library interface versions" of the libtool
 # documentation before making any modification
 # http://sources.redhat.com/autobook/autobook/autobook_91.html
-LIBVERSION = 7:0:4
+LIBVERSION = 8:0:5
 AM_CPPFLAGS = -I$(top_srcdir)/include ${LIBNFNETLINK_CFLAGS} ${LIBMNL_CFLAGS}
 AM_CFLAGS = -Wall
 noinst_LTLIBRARIES = libnfconntrack.la 
 libnfconntrack_la_SOURCES = api.c \
 			    getter.c setter.c \
+			    labels.c \
 			    parse.c build.c \
 			    parse_mnl.c build_mnl.c \
 			    snprintf.c \
@@ -319,6 +320,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/grp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/grp_getter.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/grp_setter.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/labels.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/objopt.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parse.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parse_mnl.Plo@am__quote@
