--- a/qa/Makefile.in
+++ b/qa/Makefile.in
@@ -64,6 +64,7 @@ am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
+CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am_ct_events_reliable_OBJECTS = ct_events_reliable.$(OBJEXT)
@@ -84,7 +85,7 @@ test_connlabel_DEPENDENCIES = ../src/libnetfilter_conntrack.la
 am_test_filter_OBJECTS = test_filter.$(OBJEXT)
 test_filter_OBJECTS = $(am_test_filter_OBJECTS)
 test_filter_DEPENDENCIES = ../src/libnetfilter_conntrack.la
-DEFAULT_INCLUDES = -I.@am__isrc@
+DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/build-aux/depcomp
 am__depfiles_maybe = depfiles
 am__mv = mv -f
