--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: libnetfilter-conntrack
 Section: libs
 Priority: optional
 Maintainer: Alexander Wirt <formorer@debian.org>
+Uploaders: Arturo Borrero Gonzalez <arturo.borrero.glez@gmail.com>
 Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
 Build-Depends: debhelper (>= 9), libnfnetlink-dev (>= 1.0.0), libmnl-dev (>= 1.0.3), libtool, dh-autoreconf
 Standards-Version: 3.9.6
