--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libnetfilter-conntrack
 Section: libs
 Priority: optional
 Maintainer: Alexander Wirt <formorer@debian.org>
-Uploaders: Arturo Borrero Gonzalez <arturo.borrero.glez@gmail.com>
+Uploaders: Arturo Borrero Gonzalez <arturo@debian.org>
 Homepage: http://www.netfilter.org/projects/libnetfilter_conntrack/
 Build-Depends: debhelper (>= 9),
                dh-autoreconf,
