--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Package: libnetfilter-conntrack3-dbg
 Section: debug
 Priority: extra
 Architecture: any
+Multi-Arch: same
 Depends: libnetfilter-conntrack3 (=  ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
@@ -38,6 +39,7 @@ Description: Debugging symbols for libnetfilter-conntrack3
 Package: libnetfilter-conntrack-dev
 Section: libdevel
 Architecture: any
+Multi-Arch: same
 Depends: libnetfilter-conntrack3 (= ${binary:Version}),
          libnfnetlink-dev (>= 1.0.0),
          pkg-config,
